--- a/Final_Assignment_Analyzing Historical StockRevenue Data and Building a Dashboard.ipynb
+++ b/Final_Assignment_Analyzing Historical StockRevenue Data and Building a Dashboard.ipynb
@@ -245,16 +245,20 @@
   {
    "cell_type": "markdown",
    "id": "15032e00-90d7-455e-adcd-a1eeec54d6e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "**Reset the index** using the `reset_index(inplace=True)` function on the tesla_data DataFrame and display the first five rows of the `tesla_data` dataframe using the `head` function. Take a screenshot of the results and code from the beginning of Question 1 to the results below.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "0123c47b-8378-4c7f-99be-80e571416ebd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -277,6 +281,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
        "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
@@ -290,6 +296,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2010-06-29</td>\n",
        "      <td>1.266667</td>\n",
        "      <td>1.666667</td>\n",
@@ -301,6 +309,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2010-06-30</td>\n",
        "      <td>1.719333</td>\n",
        "      <td>2.028000</td>\n",
@@ -312,6 +322,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>2010-07-01</td>\n",
        "      <td>1.666667</td>\n",
        "      <td>1.728000</td>\n",
@@ -323,6 +335,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>2010-07-02</td>\n",
        "      <td>1.533333</td>\n",
        "      <td>1.540000</td>\n",
@@ -334,6 +348,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>2010-07-06</td>\n",
        "      <td>1.333333</td>\n",
        "      <td>1.333333</td>\n",
@@ -343,108 +359,27 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3171</th>\n",
-       "      <td>2023-02-02</td>\n",
-       "      <td>187.330002</td>\n",
-       "      <td>196.750000</td>\n",
-       "      <td>182.610001</td>\n",
-       "      <td>188.270004</td>\n",
-       "      <td>217448300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3172</th>\n",
-       "      <td>2023-02-03</td>\n",
-       "      <td>183.949997</td>\n",
-       "      <td>199.000000</td>\n",
-       "      <td>183.690002</td>\n",
-       "      <td>189.979996</td>\n",
-       "      <td>231684200</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173</th>\n",
-       "      <td>2023-02-06</td>\n",
-       "      <td>193.009995</td>\n",
-       "      <td>198.169998</td>\n",
-       "      <td>189.919998</td>\n",
-       "      <td>194.759995</td>\n",
-       "      <td>186188100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174</th>\n",
-       "      <td>2023-02-07</td>\n",
-       "      <td>196.429993</td>\n",
-       "      <td>197.500000</td>\n",
-       "      <td>189.550003</td>\n",
-       "      <td>196.809998</td>\n",
-       "      <td>185601700</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3175</th>\n",
-       "      <td>2023-02-08</td>\n",
-       "      <td>196.100006</td>\n",
-       "      <td>202.850006</td>\n",
-       "      <td>194.309998</td>\n",
-       "      <td>199.229996</td>\n",
-       "      <td>104092908</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3176 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date        Open        High         Low       Close     Volume  \\\n",
-       "0    2010-06-29    1.266667    1.666667    1.169333    1.592667  281494500   \n",
-       "1    2010-06-30    1.719333    2.028000    1.553333    1.588667  257806500   \n",
-       "2    2010-07-01    1.666667    1.728000    1.351333    1.464000  123282000   \n",
-       "3    2010-07-02    1.533333    1.540000    1.247333    1.280000   77097000   \n",
-       "4    2010-07-06    1.333333    1.333333    1.055333    1.074000  103003500   \n",
-       "...         ...         ...         ...         ...         ...        ...   \n",
-       "3171 2023-02-02  187.330002  196.750000  182.610001  188.270004  217448300   \n",
-       "3172 2023-02-03  183.949997  199.000000  183.690002  189.979996  231684200   \n",
-       "3173 2023-02-06  193.009995  198.169998  189.919998  194.759995  186188100   \n",
-       "3174 2023-02-07  196.429993  197.500000  189.550003  196.809998  185601700   \n",
-       "3175 2023-02-08  196.100006  202.850006  194.309998  199.229996  104092908   \n",
+       "   level_0  index       Date      Open      High       Low     Close  \\\n",
+       "0        0      0 2010-06-29  1.266667  1.666667  1.169333  1.592667   \n",
+       "1        1      1 2010-06-30  1.719333  2.028000  1.553333  1.588667   \n",
+       "2        2      2 2010-07-01  1.666667  1.728000  1.351333  1.464000   \n",
+       "3        3      3 2010-07-02  1.533333  1.540000  1.247333  1.280000   \n",
+       "4        4      4 2010-07-06  1.333333  1.333333  1.055333  1.074000   \n",
        "\n",
-       "      Dividends  Stock Splits  \n",
-       "0             0           0.0  \n",
-       "1             0           0.0  \n",
-       "2             0           0.0  \n",
-       "3             0           0.0  \n",
-       "4             0           0.0  \n",
-       "...         ...           ...  \n",
-       "3171          0           0.0  \n",
-       "3172          0           0.0  \n",
-       "3173          0           0.0  \n",
-       "3174          0           0.0  \n",
-       "3175          0           0.0  \n",
-       "\n",
-       "[3176 rows x 8 columns]"
+       "      Volume  Dividends  Stock Splits  \n",
+       "0  281494500          0           0.0  \n",
+       "1  257806500          0           0.0  \n",
+       "2  123282000          0           0.0  \n",
+       "3   77097000          0           0.0  \n",
+       "4  103003500          0           0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +387,7 @@
    "source": [
     "tesla_data.reset_index(inplace=True)\n",
     "\n",
-    "tesla_data"
+    "tesla_data.head()"
    ]
   },
   {
@@ -802,12 +737,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "e5dbf4a7-d32e-412b-b6c5-1b22fd5944ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2002-02-13</td>\n",
+       "      <td>1.620128</td>\n",
+       "      <td>1.693350</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.691667</td>\n",
+       "      <td>76216000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2002-02-14</td>\n",
+       "      <td>1.712707</td>\n",
+       "      <td>1.716074</td>\n",
+       "      <td>1.670626</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>11021600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2002-02-15</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>1.687458</td>\n",
+       "      <td>1.658002</td>\n",
+       "      <td>1.674834</td>\n",
+       "      <td>8389600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2002-02-19</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.578047</td>\n",
+       "      <td>1.607504</td>\n",
+       "      <td>7410400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2002-02-20</td>\n",
+       "      <td>1.615921</td>\n",
+       "      <td>1.662210</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.662210</td>\n",
+       "      <td>6892800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index       Date      Open      High       Low     Close    Volume  \\\n",
+       "0      0 2002-02-13  1.620128  1.693350  1.603296  1.691667  76216000   \n",
+       "1      1 2002-02-14  1.712707  1.716074  1.670626  1.683250  11021600   \n",
+       "2      2 2002-02-15  1.683250  1.687458  1.658002  1.674834   8389600   \n",
+       "3      3 2002-02-19  1.666418  1.666418  1.578047  1.607504   7410400   \n",
+       "4      4 2002-02-20  1.615921  1.662210  1.603296  1.662210   6892800   \n",
+       "\n",
+       "   Dividends  Stock Splits  \n",
+       "0        0.0           0.0  \n",
+       "1        0.0           0.0  \n",
+       "2        0.0           0.0  \n",
+       "3        0.0           0.0  \n",
+       "4        0.0           0.0  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gme_data.reset_index(inplace=True)"
+    "gme_data.reset_index(inplace=True)\n",
+    "\n",
+    "gme_data.head()"
    ]
   },
   {
@@ -910,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "fce8dbe5-c305-48f4-aecb-487126ac37b3",
    "metadata": {},
    "outputs": [
@@ -988,7 +1043,7 @@
        "61  2005-01-31     709"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7517,7 +7572,7 @@
         },
         "xaxis": {
          "anchor": "y",
-         "autorange": false,
+         "autorange": true,
          "domain": [
           0,
           1
@@ -18392,7 +18447,7 @@
         },
         "xaxis": {
          "anchor": "y",
-         "autorange": false,
+         "autorange": true,
          "domain": [
           0,
           1
